--- a/src/pages/test.pug
+++ b/src/pages/test.pug
@@ -10,3 +10,5 @@ html(lang="en")
 
         - for (var x = 0; x < 3; x++)
             li finally working!!
+        
+        a( href='../../index.html' ) Home
